--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -22,7 +22,8 @@ dependencies:
     # the parent directory to use the current plugin's version.
     path: ../
   image_picker: ^0.7.2
-  camera: ^0.9.4+11 #^0.8.1
+  camera: ^0.9.4+11
+  fuzzy: ^0.4.0-nullsafety.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
