--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,8 +8,14 @@ environment:
   flutter: ">=1.20.0"
 
 dependencies:
+  cloud_firestore: ^3.1.10
+  firebase: ^9.0.2
+  firebase_auth: ^3.3.9
+  firebase_database: ^9.0.8
+  firebase_storage: ^10.2.9
   flutter:
     sdk: flutter
+  path_provider: ^2.0.9
   vector_math: ^2.1.0
 
 dev_dependencies:
