--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   image_picker: ^0.7.2
   camera: ^0.9.4+11
   fuzzy: ^0.4.0-nullsafety.0
+  firebase_storage: ^10.2.9
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
