--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   camera: ^0.9.4+11
   fuzzy: ^0.4.0-nullsafety.0
   firebase_storage: ^10.2.9
+  flutter_pdfview: ^1.0.4
+  video_player: ^2.3.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
